--- a/src/css_files/Navbar.css
+++ b/src/css_files/Navbar.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   background-color: black;
   color: white;
+  position: relative;
 }
 
 .navbar blockquote {
@@ -25,9 +26,37 @@
   align-items: center;
   gap: 0.5rem;
   color: white;
+  cursor: pointer;
+}
+
+.navbar blockquote mark:hover {
+  text-decoration: underline;
 }
 
 .navbar blockquote mark:last-child {
   background-color: orangered;
   padding: 1rem;
+}
+
+.navbar-service {
+  display: none;
+  position: absolute;
+  top: 5rem;
+  right: 20rem;
+  z-index: 5;
+  background-color: white;
+  border: 1px solid black;
+}
+
+.navbar-service ul li {
+  list-style-position: inside;
+  color: black;
+  padding: 1rem;
+  border-bottom: 1px solid dashed;
+  cursor: pointer;
+}
+
+.navbar-service ul li:hover {
+  background-color: whitesmoke;
+  text-decoration: underline;
 }
