--- a/src/css_files/ITServices.css
+++ b/src/css_files/ITServices.css
@@ -31,13 +31,21 @@
   gap: 1.5rem;
   transform: translateY(-1500px);
   opacity: 0;
-  padding: 2rem;
   color: white;
   border-radius: 1rem;
-  position: relative;
   box-shadow: 0.5rem 0 1rem gray;
+  background-color: #072b2b;
+  padding: 1.5rem 0.5rem 0 0.5rem;
 }
 
+.it-services aside figure blockquote {
+  padding: 0 2rem 2rem 2rem;
+}
+
+.it-services aside figure h3 {
+  text-align: center;
+}
+/*
 .it-services aside figure::before {
   content: "";
   position: absolute;
@@ -59,19 +67,14 @@
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
   z-index: 2;
-}
+}*/
 
 .it-services aside figure blockquote {
   color: white;
 }
 
-.it-services aside figure h3 {
-  z-index: 3;
-}
-
 .it-services aside figure blockquote ul {
   line-height: 3cap;
-  z-index: 3;
 }
 
 .it-services aside figure blockquote ul li {
@@ -82,7 +85,7 @@
 .it-services aside figure img {
   width: 100%;
   height: 30vh;
-  z-index: 3;
+  box-shadow: 0 0 2rem rgb(76, 162, 96);
 }
 
 @media (max-width: 1400px) {
